# crawler

./: .env.example  .gitignore  README.md  pyproject.toml
collector/: cli.py  factory.py
collector/adapters/: __init__.py  firecrawl.py  google_search.py  osm.py  source_registry.py  web_page.py  wikidata.py  wikipedia.py
collector/core/: config.py  coverage.py  dedupe.py  enrichment.py  entity_refinement.py  http.py  ids.py  image_blob.py  image_enrichment.py  mobile_export.py  models.py  orchestrator.py  postgres_export.py  production_web_enrichment.py  quality.py  refine.py  storage.py  structured_bulk.py  structured_extraction.py
configs/: categories.json  hyderabad_queries_1000.txt
data/city/source_pages/: allevents_in-_hyderabad_it-2ec86efd82a6.json  allevents_in-_hyderabad_startup-bc80ff7b9b07.json  allevents_in-_hyderabad_startups-01d783efb954.json  fooddy_in-_blog_24-hours-open-restaurants-in-hyderabad-15c90362c12f.json  frenzyholidays_com-_best-places-to-visit-at-night-in-hyderabad-41c7e74b62aa.json  github_com-_chethanyadav456_hyderabad-tech-events-2d7d1e4d4e0f.json  hyderabad_aitinkerers_org-0510622522e0.json  hyderabad_aitinkerers_org-_all_cities-f972126ca562.json  hyderabadangels_in-4bae45f32f98.json  laptopfriendlycafe_com-_best-cafes-to-work-from-in-hyderabad-5d6d8cf8c14e.json  lbb_in-_hyderabad_best-cafes-hyderabad-1e522f9a0585.json  (+112 more)
docs/: ACCESS_POLICY.md  FIRECRAWL_LOCAL.md  IMPLEMENTATION_TRACKER.md  ROADMAP.md
scripts/: run_firecrawl_crawler.ps1  run_structured_city_pipeline.ps1  setup_firecrawl_local.ps1
