[project]
name = "cupidai-crawler"
version = "0.1.0"
description = "Filesystem-first autonomous Hyderabad city knowledge collector"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
hyd-collector = "collector.cli:main"

[tool.setuptools.packages.find]
include = ["collector*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
